# aikido

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  static.yml
azure/: .funcignore  README.md  function_app.py  local.settings.json.example  requirements.txt
azure/aikido_daily/: __init__.py  github_pr.py  payload.py  pipeline.py
docs/: 404.html  commands.html  commands.meta.json  concepts.html  getting-started.html  index.html  structure.html  style.css
docs/_templates/: commands.html.j2
scripts/: gen_docs.py
src/aikido/: __init__.py  cli.py
src/aikido/commands/: build_agent.py  daily.py  init.py  knowledge.py  validate.py  weekly.py
src/aikido/core/: config.py  scaffold.py  transpiler.py
src/aikido/data/contracts/: daily_from_transcript.json  founder_weekly_review.json
src/aikido/data/control_plane/: founder_identity.md  safety_guardrails.md  tone_voice.md
src/aikido/data/templates/: _base.prompt.md  daily_from_transcript.prompt.md  founder_weekly_review.prompt.md
tests/: test_daily.py  test_init_and_build.py  test_transpiler.py
